{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 56,
  "lineage": "c2ee85f3-3568-bb63-6b62-ac51f9bb4b1c",
  "resources": [
    {
      "module": "module.canary_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "canary_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:security-group/sg-04a247690a390c8c6",
            "description": "Security group attached to interface endpoints",
            "egress": [],
            "id": "sg-04a247690a390c8c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow calls from canary to HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ac4f5a5eddeb62a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "canary_endpoints_sg",
            "name_prefix": "",
            "owner_id": "975351939056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "canary"
            },
            "tags_all": {
              "Name": "canary"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.canary_infra.aws_security_group.canary_sg"
          ]
        }
      ]
    },
    {
      "module": "module.canary_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "canary_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975351939056:security-group/sg-01ac4f5a5eddeb62a",
            "description": "Allow canaries to call the services they need to call",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow calls from canary to DNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow calls from canary to HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow calls from canary to HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-01ac4f5a5eddeb62a",
            "ingress": [],
            "name": "canary_sg",
            "name_prefix": "",
            "owner_id": "975351939056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "canary"
            },
            "tags_all": {
              "Name": "canary"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b702edb5051d41e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}